--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "node-bcc",
   "version": "1.0.0",
   "description": "A simple Block Check Character library.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
     "test": "nyc mocha",
-    "doc": "typedoc"
+    "doc": "typedoc",
+    "release": "standard-version && git push --follow-tags origin master && npm publish"
   },
   "repository": {
     "type": "git",
@@ -35,6 +38,7 @@
     "nyc": "^12.0.2",
     "sinon": "^6.0.1",
     "source-map-support": "^0.5.6",
+    "standard-version": "^4.4.0",
     "ts-node": "^7.0.0",
     "typedoc": "^0.11.1",
     "typescript": "^2.9.2"
