--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "node-bcc",
   "version": "2.2.0",
   "description": "A simple Block Check Character library.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "build/src/index.js",
+  "types": "build/src/index.d.ts",
   "scripts": {
-    "build": "tsc",
     "test": "nyc mocha",
     "codecov": "codecov -f coverage/coverage-final.json",
     "doc": "typedoc",
-    "tslint": "tslint --project ./tsconfig.json",
-    "release": "standard-version && git push --follow-tags origin master && npm publish"
+    "release": "standard-version && git push --follow-tags origin master && npm publish",
+    "check": "gts check",
+    "clean": "gts clean",
+    "compile": "tsc -p .",
+    "fix": "gts fix",
+    "prepare": "npm run compile",
+    "pretest": "npm run compile",
+    "posttest": "npm run check"
   },
   "repository": {
     "type": "git",
@@ -37,6 +42,7 @@
     "@types/sinon": "^7.0.2",
     "chai": "^4.1.2",
     "codecov": "^3.0.2",
+    "gts": "^0.9.0",
     "mocha": "^5.2.0",
     "nyc": "^12.0.2",
     "sinon": "^6.0.1",
@@ -44,8 +50,9 @@
     "standard-version": "^4.4.0",
     "ts-node": "^7.0.0",
     "tslint": "^5.10.0",
+    "tslint-no-unused-expression-chai": "^0.1.4",
     "typedoc": "^0.13.0",
-    "typescript": "^2.9.2"
+    "typescript": "~3.1.0"
   },
   "nyc": {
     "include": [
