--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "test": "nyc mocha",
     "codecov": "codecov -f coverage/coverage-final.json",
     "doc": "typedoc",
-    "release": "standard-version && git push --follow-tags origin master && npm publish",
     "check": "gts check",
     "clean": "gts clean",
     "compile": "tsc -p .",
@@ -38,39 +37,21 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.6",
-    "@types/node": "^11.13.8",
-    "@types/sinon": "^7.0.6",
+    "@types/node": "^12.0.3",
+    "@types/sinon": "^7.0.12",
     "chai": "^4.2.0",
-    "codecov": "^3.2.0",
-    "gts": "^0.9.0",
-    "mocha": "^5.2.0",
-    "nyc": "^14.0.0",
-    "sinon": "^6.3.5",
-    "source-map-support": "^0.5.10",
-    "standard-version": "^4.4.0",
-    "ts-node": "^8.1.0",
-    "tslint": "^5.12.1",
+    "codecov": "^3.5.0",
+    "gts": "^1.0.0",
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
+    "sinon": "^7.3.2",
+    "source-map-support": "^0.5.12",
+    "ts-node": "^8.2.0",
     "tslint-no-unused-expression-chai": "^0.1.4",
     "typedoc": "^0.14.2",
-    "typescript": "~3.1.0"
+    "typescript": "~3.5.1"
   },
-  "nyc": {
-    "include": [
-      "src/**/*.ts"
-    ],
-    "exclude": [
-      "src/**/*.spec.ts"
-    ],
-    "extension": [
-      ".ts"
-    ],
-    "reporter": [
-      "text-summary",
-      "html",
-      "json"
-    ],
-    "sourceMap": true,
-    "instrument": true,
-    "all": true
-  }
+  "files": [
+    "build/**/*"
+  ]
 }
