--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "doc": "typedoc",
     "check": "gts check",
     "clean": "gts clean",
-    "compile": "tsc -p .",
+    "compile": "tsc",
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
@@ -35,21 +35,20 @@
   },
   "homepage": "https://github.com/beyerleinf/node-bcc#readme",
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^12.0.3",
-    "@types/sinon": "^7.0.12",
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.11.1",
+    "@types/sinon": "^9.0.4",
     "chai": "^4.2.0",
-    "codecov": "^3.5.0",
-    "gts": "^1.0.0",
-    "mocha": "^6.1.4",
-    "nyc": "^14.1.1",
-    "sinon": "^7.3.2",
+    "codecov": "^3.7.0",
+    "gts": "^2.0.2",
+    "mocha": "^8.0.1",
+    "nyc": "^15.1.0",
+    "sinon": "^9.0.2",
     "source-map-support": "^0.5.12",
-    "ts-node": "^8.2.0",
-    "tslint-no-unused-expression-chai": "^0.1.4",
-    "typedoc": "^0.14.2",
-    "typescript": "~3.5.1"
+    "ts-node": "^8.10.2",
+    "typedoc": "^0.17.8",
+    "typescript": "^3.8.3"
   },
   "files": [
     "build/**/*"
