--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "test": "nyc mocha",
     "codecov": "codecov -f coverage/coverage-final.json",
     "doc": "typedoc",
-    "check": "gts check",
+    "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
-    "posttest": "npm run check"
+    "posttest": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -28,27 +28,31 @@
     "character",
     "bcc"
   ],
-  "author": "Fabian Beyerlein",
+  "author": {
+    "name": "Fabian Beyerlein",
+    "email": "dev@beyerleinf.de",
+    "url": "https://github.com/beyerleinf"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/beyerleinf/node-bcc/issues"
   },
   "homepage": "https://github.com/beyerleinf/node-bcc#readme",
   "devDependencies": {
-    "@types/chai": "^4.2.11",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^13.11.1",
-    "@types/sinon": "^9.0.4",
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.17",
+    "@types/sinon": "^9.0.10",
     "chai": "^4.2.0",
-    "codecov": "^3.7.0",
-    "gts": "^2.0.2",
-    "mocha": "^8.0.1",
+    "codecov": "^3.8.1",
+    "gts": "^3.0.3",
+    "mocha": "^8.2.1",
     "nyc": "^15.1.0",
-    "sinon": "^9.0.2",
+    "sinon": "^9.2.2",
     "source-map-support": "^0.5.12",
     "ts-node": "^8.10.2",
-    "typedoc": "^0.17.8",
-    "typescript": "^3.8.3"
+    "typedoc": "^0.20.5",
+    "typescript": "^4.1.3"
   },
   "files": [
     "build/**/*"
