--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,14 @@ jobs:
       - run: npm install
       - run: npm run compile
       - run: npm run doc
+      - name: Upload docs
+        uses: SamKirkland/FTP-Deploy-Action@4.0.0
+        with:
+          server: beyerleinf.de
+          username: ${{ secrets.FTP_USER }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: ./docs/
+          server-dir: node-bcc/
       - name: Package Release
         run: ./pack.sh
       - name: Get the version
