--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,7 +57,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/release.tar.gz
+          asset_path: ./release.tar.gz
           asset_name: ${{ format('node-bcc-{0}.tar.gz', steps.get_version.outputs.VERSION) }}
           asset_content_type: application/gzip
       - name: Upload Release Asset .zip
@@ -67,6 +67,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/release.zip
+          asset_path: ./release.zip
           asset_name: ${{ format('node-bcc-{0}.zip', steps.get_version.outputs.VERSION) }}
           asset_content_type: application/zip
