--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -22,7 +22,7 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
-      - run npm i -g npm@latest
+      - run: npm i -g npm@latest
       - run: npm ci
       - run: npm test
       - run: npm run codecov
