--- a/package.json
+++ b/package.json
@@ -39,20 +39,20 @@
   },
   "homepage": "https://github.com/beyerleinf/node-bcc#readme",
   "devDependencies": {
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.17",
-    "@types/sinon": "^9.0.10",
-    "chai": "^4.2.0",
-    "codecov": "^3.8.1",
-    "gts": "^3.0.3",
-    "mocha": "^8.2.1",
+    "@types/chai": "^4.2.18",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.12.2",
+    "@types/sinon": "^10.0.2",
+    "chai": "^4.3.4",
+    "codecov": "^3.8.2",
+    "gts": "^3.1.0",
+    "mocha": "^9.0.0",
     "nyc": "^15.1.0",
-    "sinon": "^9.2.2",
-    "source-map-support": "^0.5.12",
-    "ts-node": "^8.10.2",
-    "typedoc": "^0.20.32",
-    "typescript": "^4.1.3"
+    "sinon": "^11.1.1",
+    "source-map-support": "^0.5.19",
+    "ts-node": "^10.0.0",
+    "typedoc": "^0.20.36",
+    "typescript": "4.2"
   },
   "files": [
     "build/**/*"
