--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [12.x, 13.x, 14.x, 15.x, 16.x, 17.x]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -30,7 +30,11 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
-      - run: npm i -g npm@latest
       - run: npm ci
-      - run: npm test
-      - run: npm run codecov
+      - run: npm run test
+      - run: npm run build
+      - name: Publish Code Coverage
+        uses: codecov/codecov-action@v2
+        with:
+          files: ./coverage/coverage-final.json
+          fail_ci_if_error: true
