--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,6 +1,9 @@
 {
   "require": ["ts-node/register", "source-map-support/register"],
-  "reporter": "spec",
   "recursive": true,
-  "spec": "src/**/*.spec.ts"
+  "spec": ["src/**/*.spec.ts"],
+  "inlineDiffs": true,
+  "extension": ["ts"],
+  "reporter": "mocha-multi-reporters",
+  "reporterOptions": "configFile=multi-reporters.config.json"
 }
