--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
   "scripts": {
-    "test": "nyc mocha",
-    "codecov": "codecov -f coverage/coverage-final.json",
+    "test": "c8 mocha",
     "doc": "typedoc",
     "lint": "gts lint",
     "clean": "gts clean",
@@ -38,26 +37,31 @@
     "url": "https://github.com/beyerleinf/node-bcc/issues"
   },
   "homepage": "https://github.com/beyerleinf/node-bcc#readme",
-  "devDependencies": {
-    "@types/chai": "^4.2.18",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^15.12.2",
-    "@types/sinon": "^10.0.2",
-    "chai": "^4.3.4",
-    "codecov": "^3.8.2",
-    "gts": "^3.1.0",
-    "mocha": "^9.0.0",
-    "nyc": "^15.1.0",
-    "sinon": "^11.1.1",
-    "source-map-support": "^0.5.19",
-    "ts-node": "^10.0.0",
-    "typedoc": "^0.20.36",
-    "typescript": "4.2"
-  },
   "files": [
-    "build/**/*"
+    "build",
+    "README.md",
+    "LICENSE.md",
+    "CHANGELOG.md"
   ],
   "engines": {
-    "node": ">= 10.0.0"
+    "node": ">= 12.0.0"
+  },
+  "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^16.11.24",
+    "@types/sinon": "^10.0.11",
+    "c8": "^7.11.0",
+    "chai": "^4.3.6",
+    "gts": "^3.1.0",
+    "mocha": "^9.2.1",
+    "mocha-multi-reporters": "^1.5.1",
+    "nyc": "^15.1.0",
+    "sinon": "^13.0.1",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.5.0",
+    "typedoc": "^0.22.12",
+    "typescript": "4.4.4"
   }
 }
