--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -32,7 +32,7 @@ jobs:
             ${{ runner.os }}-node-
       - run: npm ci
       - run: npm run test
-      - run: npm run build
+      - run: npm run compile
       - name: Publish Code Coverage
         uses: codecov/codecov-action@v2
         with:
