--- a/package.json
+++ b/package.json
@@ -48,20 +48,20 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^16.11.24",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.35",
     "@types/sinon": "^10.0.11",
-    "c8": "^7.11.0",
+    "c8": "^7.11.3",
     "chai": "^4.3.6",
     "gts": "^3.1.0",
-    "mocha": "^9.2.1",
+    "mocha": "^10.0.0",
     "mocha-multi-reporters": "^1.5.1",
     "nyc": "^15.1.0",
-    "sinon": "^13.0.1",
+    "sinon": "^14.0.0",
     "source-map-support": "^0.5.21",
-    "ts-node": "^10.5.0",
-    "typedoc": "^0.22.12",
-    "typescript": "4.4.4"
+    "ts-node": "^10.7.0",
+    "typedoc": "^0.22.15",
+    "typescript": "^4.6.4"
   }
 }
